# mms-client

./: .pre-commit-config.yaml  CODEOWNERS  README.md  pyproject.toml  version_check.sh
.github/workflows/: check.yml  release.yml
src/mms_client/: __init__.py  client.py  empty.py  web.py
src/mms_client/schemas/wsdl/: mi-web-service-jbms.wsdl  omi-web-service.wsdl
src/mms_client/schemas/xsd/: mi-market.xsd  mi-outbnd-reports.xsd  mi-report.xsd  mpr.xsd  omi.xsd
src/mms_client/security/: certs.py  crypto.py
src/mms_client/services/: base.py  market.py  omi.py  registration.py  report.py
src/mms_client/types/: award.py  base.py  bup.py  enums.py  fields.py  market.py  offer.py  omi.py  registration.py  report.py  reserve.py  resource.py  settlement.py  surplus_capcity.py  transport.py
src/mms_client/utils/: auditing.py  certs.py  errors.py  multipart_transport.py  plugin.py  serialization.py  web.py
tests/: conftest.py  test_empty.py  test_web.py  testutils.py
tests/test_client/: test_base.py  test_market.py  test_omi.py  test_registration.py  test_report.py
tests/test_files/: awards_response_full.xml  awards_response_real.xml  base_failed_response.xml  base_request.xml  base_response.xml  bsp_resource_list_full.xml  bup_submit_full.xml  create_report_request.xml  create_report_request_full.xml  create_report_response_full.xml  delete_offer_request.xml  delete_offer_response.xml  download_report_request.xml  download_report_request_full.xml  download_report_response_full.xml  fake.p12  get_settlement_results_request.xml  get_settlement_results_response.xml  list_report_request_full.xml  list_report_response_full.xml  list_reports_request_full.xml  list_reports_response_full.xml  put_bup_request.xml  put_bup_response.xml  put_offer_request.xml  put_offer_response.xml  put_resource_request.xml  put_resource_response.xml  put_surplus_capacity_request.xml  query_awards_request.xml  query_awards_response.xml  query_bups_request.xml  query_offers_request.xml  query_reserve_requirements_request.xml  query_reserve_requirements_response.xml  query_resources_request.xml  query_surplus_capacity_request.xml  reserve_requirement_full.xml  resource_full.xml  serialization_1.xml  (+6 more)
tests/test_security/: test_certs.py  test_crypto.py
tests/test_types/: test_award.py  test_base.py  test_bup.py  test_market.py  test_offer.py  test_omi.py  test_registration.py  test_report.py  test_reserve.py  test_resource.py  test_settlement.py  test_surplus_capacity.py  test_transport.py
tests/test_utils/: test_auditing.py  test_certs.py  test_plugin.py  test_serialization.py  test_web.py
